--- a/package.json
+++ b/package.json
@@ -17,14 +17,17 @@
     "@react-navigation/bottom-tabs": "^6.5.2",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.7",
+    "@reduxjs/toolkit": "^1.9.1",
     "react": "18.1.0",
     "react-native": "0.70.6",
+    "react-native-google-maps-directions": "^2.1.1",
     "react-native-maps": "^1.3.2",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-select-dropdown": "^3.1.0",
     "react-native-snap-carousel": "^3.9.1",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
